corrected spacing between checkbox and text

--- a/src/components/containers/Privacy Container/User Agreement/UserAgreement.css
+++ b/src/components/containers/Privacy Container/User Agreement/UserAgreement.css
@@ -13,8 +13,5 @@
    font-size: 12px;
    line-height: 14px;
    color: #9B9B9B;
-}
-
-.userAgreement a {
-   color: inherit;
+   padding-left: 3px;
 }
